// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen renders the achievements section 1`] = `
<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div
      class="container py-10"
    >
      <div
        class="space-y-6 flex flex-col py-3 items-start"
      >
        <h1
          class="font-bold font-heading text-3xl"
        >
          Hi, I’m Yony Calsin.
        </h1>
        <p
          class="font-heading text-lg"
        >
          I’m a software developer from 
          <b>
            Perú
          </b>
          . I work at
           
          <span>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline inline-flex items-center"
              href="https://www.linkedin.com/company/making-sense-llc"
              rel="noreferrer"
              role="link"
              target="_blank"
            >
              Making Sense
            </a>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0 align-top"
              fill="none"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="7"
                x2="17"
                y1="17"
                y2="7"
              />
              <polyline
                points="7 7 17 7 17 17"
              />
            </svg>
          </span>
           as a
           
          <b>
            Frontend Developer.
          </b>
          <a
            class="emotion-0"
            href=""
          >
            hola
          </a>
        </p>
        <div
          class="flex flex-wrap gap-3"
        >
          <a
            href="https://www.linkedin.com/in/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-primary-700 hover:text-white border-primary-700 hover:bg-primary-800 focus:ring-primary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Linkedin
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://github.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none  text-success-700 hover:text-white border-success-700 hover:bg-success-800 focus:ring-success-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.435 12.973c.269 0 .492.133.686.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.193.265-.417.396-.686.396-.278 0-.522-.131-.715-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.192-.264.436-.396.715-.396m3.44-3.559c.746.811 1.125 1.795 1.125 2.953 0 .748-.086 1.423-.259 2.023-.175.597-.394 1.084-.654 1.459-.264.376-.588.705-.974.989-.386.286-.741.492-1.065.623-.325.132-.695.233-1.111.306-.417.071-.726.111-.943.123l-.685.014-.547.015c-.301.013-.56.016-.762.016s-.461-.003-.762-.016l-.547-.015-.685-.014c-.218-.012-.526-.052-.943-.123-.423-.072-.786-.174-1.111-.306-.324-.131-.68-.337-1.064-.623-.387-.284-.711-.613-.975-.989-.261-.375-.479-.862-.654-1.459-.173-.6-.259-1.275-.259-2.023 0-1.158.379-2.143 1.125-2.953-.082-.041-.085-.447-.008-1.217.063-.771.227-1.482.495-2.132.934.099 2.09.629 3.471 1.581.466-.119 1.101-.183 1.917-.183.852 0 1.491.064 1.918.184.629-.425 1.23-.771 1.805-1.034.584-.261 1.005-.416 1.269-.457l.396-.09c.27.649.434 1.36.496 2.132.076.769.073 1.175-.009 1.216m-5.845 7.82c1.688 0 2.954-.202 3.821-.607.855-.404 1.292-1.238 1.292-2.496 0-.73-.273-1.34-.822-1.828-.278-.263-.613-.425-.989-.486-.375-.061-.949-.061-1.72 0-.769.062-1.298.09-1.582.09-.385 0-.8-.018-1.319-.059-.52-.04-.928-.065-1.223-.078-.294-.009-.609.027-.958.108-.345.082-.629.224-.853.425-.521.469-.79 1.077-.79 1.828 0 1.258.426 2.092 1.28 2.496.85.405 2.113.607 3.802.607h.061m-2.434-4.261c.268 0 .492.133.685.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.192.265-.417.396-.685.396-.279 0-.522-.131-.716-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.193-.264.436-.396.716-.396"
                  />
                </svg>
              </div>
              Github
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://twitter.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-secondary-700 hover:text-white border-secondary-700 hover:bg-secondary-800 focus:ring-secondary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Twitter
              <div
                class="ml-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.89 7.012c.808-.496 1.343-1.173 1.605-2.034-.786.417-1.569.703-2.351.861-.703-.756-1.593-1.14-2.66-1.14-1.043 0-1.924.366-2.643 1.078-.715.717-1.076 1.588-1.076 2.605 0 .309.039.585.117.819-3.076-.105-5.622-1.381-7.628-3.837-.34.601-.51 1.213-.51 1.846 0 1.301.549 2.332 1.645 3.089-.625-.053-1.176-.211-1.645-.47 0 .929.273 1.705.82 2.388.549.676 1.254 1.107 2.115 1.291-.312.08-.641.118-.979.118-.312 0-.533-.026-.664-.083.23.757.664 1.371 1.291 1.841.625.472 1.344.721 2.152.743-1.332 1.045-2.855 1.562-4.578 1.562-.422 0-.721-.006-.902-.038 1.697 1.102 3.586 1.649 5.676 1.649 2.139 0 4.029-.542 5.674-1.626 1.645-1.078 2.859-2.408 3.639-3.974.784-1.564 1.172-3.192 1.172-4.892v-.468c.758-.57 1.371-1.212 1.84-1.921-.68.293-1.383.492-2.11.593z"
                  />
                </svg>
              </div>
            </button>
          </a>
        </div>
      </div>
      <hr
        class="opacity-[0.6] border-gray-300 border-solid w-full border-b-[1px] my-6"
      />
      <div
        class="py-3"
      >
        <div>
          <div
            class="flex items-center justify-between relative"
          >
            <h1
              class="font-bold font-heading text-xl"
            >
              Achievements
            </h1>
          </div>
          <p
            class="mt-3"
          >
            Featured achievements that I have achieved along my career.
          </p>
        </div>
        <br />
        <div
          aria-label="List of achievements"
          class="space-y-3"
          role="list"
        >
          <div
            class="grid items-center grid-cols-1 lg:grid-cols-[100px_1fr_100px] gap-6"
            role="listitem"
          >
            <div
              class="hidden lg:block"
            >
              <svg
                clip-rule="evenodd"
                fill-rule="evenodd"
                stroke-linejoin="round"
                stroke-miterlimit="2"
                viewBox="0 0 170 170"
              >
                <path
                  d="M.87 0h170v170H.87z"
                  fill="none"
                />
                <clippath
                  id="briefcase_svg__a"
                >
                  <path
                    d="M.87 0h170v170H.87z"
                  />
                </clippath>
                <g
                  clip-path="url(#briefcase_svg__a)"
                >
                  <circle
                    cx="85.662"
                    cy="85.208"
                    fill="#fff5f5"
                    r="84.792"
                  />
                  <path
                    d="M100.795 44.028l.087.002.087.003.087.003.087.005.086.006.086.007.086.009.085.009.085.01.085.011.085.013.084.013.083.015.084.015.083.017.082.017.083.019.082.019.081.02.081.022.081.022.08.024.08.024.08.025.079.027.078.027.079.028.077.029.078.03.077.031.076.032.076.032.075.034.075.034.075.036.074.036.073.037.073.038.072.039.072.039.072.041.071.041.07.042.07.043.069.044.068.044.068.046.068.046.067.047.066.048.066.048.065.05.064.05.064.05.063.052.063.052.062.053.061.054.06.054.06.056.06.055.058.057.058.057.058.058.056.059.056.059.055.06.055.061.053.061.053.062.053.063.051.063.051.064.05.064.049.065.049.066.048.066.047.067.046.067.045.068.045.069.043.069.043.07.043.07.041.071.04.071.04.072.039.073.038.073.037.073.036.074.035.074.035.075.033.076.033.076.032.076.031.077.03.077.029.078.028.078.027.079.026.079.026.079.024.08.023.081.023.08.021.081.021.082.019.082.019.082.017.083.016.083.016.083.014.084.014.084.012.085.011.084.011.085.009.086.008.085.007.086.006.087.005.086.004.087.003.087.001.088.001.088v41.255l-.001.087-.001.088-.003.087-.004.087-.005.087-.006.086-.007.086-.008.086-.009.085-.011.085-.011.085-.012.084-.014.084-.014.084-.016.083-.016.083-.017.083-.019.082-.019.082-.021.082-.021.081-.023.081-.023.08-.024.08-.026.08-.026.079-.027.078-.028.078-.029.078-.03.077-.031.077-.032.077-.033.076-.033.075-.035.075-.035.074-.036.074-.037.074-.038.073-.039.072-.04.072-.04.071-.041.071-.043.071-.043.069-.043.069-.045.069-.045.068-.046.067-.047.067-.048.067-.049.065-.049.065-.05.065-.051.064-.051.063-.053.062-.053.062-.053.062-.055.06-.055.06-.056.06-.056.058-.058.058-.058.057-.058.057-.06.056-.06.055-.06.054-.061.054-.062.053-.063.052-.063.052-.064.051-.064.05-.065.049-.066.049-.066.047-.067.047-.068.047-.068.045-.068.044-.069.044-.07.043-.07.042-.071.042-.072.04-.072.04-.072.039-.073.038-.073.037-.074.036-.075.035-.075.035-.075.033-.076.033-.076.032-.077.031-.078.029-.077.029-.079.029-.078.027-.079.026-.08.025-.08.025-.08.023-.081.022-.081.022-.081.02-.082.02-.083.018-.082.018-.083.016-.084.016-.083.014-.084.014-.085.012-.085.011-.085.01-.085.01-.086.008-.086.007-.086.006-.087.005-.087.004-.087.003-.087.001-.088.001H70.618l-.088-.001-.087-.001-.088-.003-.086-.004-.087-.005-.086-.006-.086-.007-.086-.008-.085-.01-.086-.01-.084-.011-.085-.012-.084-.014-.084-.014-.083-.016-.083-.016-.083-.018-.082-.018-.082-.02-.081-.02-.081-.022-.081-.022-.081-.023-.079-.025-.08-.025-.079-.026-.079-.027-.078-.029-.078-.029-.077-.029-.077-.031-.076-.032-.076-.033-.076-.033-.074-.035-.075-.035-.074-.036-.073-.037-.073-.038-.073-.039-.072-.04-.071-.04-.071-.042-.07-.042-.07-.043-.069-.044-.068-.044-.069-.045-.067-.047-.067-.047-.066-.047-.066-.049-.065-.049-.064-.05-.064-.051-.063-.052-.063-.052-.062-.053-.061-.054-.061-.054-.06-.055-.059-.056-.059-.057-.058-.057-.057-.058-.056-.058-.056-.06-.055-.06-.055-.06-.054-.062-.053-.062-.052-.062-.051-.063-.051-.064-.05-.065-.05-.065-.048-.065-.048-.067-.047-.067-.046-.067-.045-.068-.045-.069-.044-.069-.043-.069-.042-.071-.041-.071-.041-.071-.039-.072-.039-.072-.038-.073-.037-.074-.036-.074-.036-.074-.034-.075-.034-.075-.032-.076-.032-.077-.031-.077-.03-.077-.029-.078-.028-.078-.027-.078-.026-.079-.026-.08-.024-.08-.023-.08-.023-.081-.021-.081-.021-.082-.019-.082-.019-.082-.017-.083-.017-.083-.015-.083-.015-.084-.013-.084-.012-.084-.012-.085-.01-.085-.009-.085-.008-.086-.007-.086-.006-.086-.005-.087-.004-.087-.003-.087-.002-.088V50.73l.002-.088.003-.087.004-.087.005-.086.006-.087.007-.086.008-.085.009-.086.01-.085.012-.084.012-.085.013-.084.015-.084.015-.083.017-.083.017-.083.019-.082.019-.082.021-.082.021-.081.023-.08.023-.081.024-.08.026-.079.026-.079.027-.079.028-.078.029-.078.03-.077.031-.077.032-.076.032-.076.034-.076.034-.075.036-.074.036-.074.037-.073.038-.073.039-.073.039-.072.041-.071.041-.071.042-.07.043-.07.044-.069.045-.069.045-.068.046-.067.047-.067.048-.066.048-.066.05-.065.05-.064.051-.064.051-.063.052-.063.053-.062.054-.061.055-.061.055-.06.056-.059.056-.059.057-.058.058-.057.059-.057.059-.055.06-.056.061-.054.061-.054.062-.053.063-.052.063-.052.064-.05.064-.05.065-.05.066-.048.066-.048.067-.047.067-.046.069-.046.068-.044.069-.044.07-.043.07-.042.071-.041.071-.041.072-.039.073-.039.073-.038.073-.037.074-.036.075-.036.074-.034.076-.034.076-.032.076-.032.077-.031.077-.03.078-.029.078-.028.079-.027.079-.027.08-.025.079-.024.081-.024.081-.022.081-.022.081-.02.082-.019.082-.019.083-.017.083-.017.083-.015.084-.015.084-.013.085-.013.084-.011.086-.01.085-.009.086-.009.086-.007.086-.006.087-.005.086-.003.088-.003.087-.002h30.265zm-26.967 10v34.835h23.669V54.028H73.828z"
                    fill="#9b2c2c"
                  />
                  <path
                    d="M130.965 68.365a6.793 6.793 0 00-6.79-6.79H47.15a6.793 6.793 0 00-6.79 6.79v45.103a6.793 6.793 0 006.79 6.79h77.025a6.793 6.793 0 006.79-6.79V68.365z"
                    fill="#f56565"
                  />
                  <path
                    d="M85.662 79.55l2.807 8.637h9.082l-7.348 5.338 2.807 8.637-7.348-5.338-7.347 5.338 2.807-8.637-7.348-5.338h9.082l2.806-8.637z"
                    fill="#fff"
                  />
                </g>
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h4
                class="font-bold"
              >
                Revelation of the year - 2022
              </h4>
              <p>
                I was recognized for incredible performance as a software developer in 2022 at CompanyName.
              </p>
              <p
                class="block lg:hidden italic"
              >
                - 
                12 Sep, 2022
              </p>
            </div>
            <span
              class="italic text-sm hidden lg:block whitespace-nowrap"
            >
              -
              12 Sep, 2022
            </span>
          </div>
          <div
            class="grid items-center grid-cols-1 lg:grid-cols-[100px_1fr_100px] gap-6"
            role="listitem"
          >
            <div
              class="hidden lg:block"
            >
              <svg
                clip-rule="evenodd"
                fill-rule="evenodd"
                stroke-linejoin="round"
                stroke-miterlimit="1.414"
                viewBox="0 0 170 170"
              >
                <path
                  d="M0 0h170v170H0z"
                  fill="none"
                />
                <clippath
                  id="trophy_svg__a"
                >
                  <path
                    d="M0 0h170v170H0z"
                  />
                </clippath>
                <g
                  clip-path="url(#trophy_svg__a)"
                >
                  <circle
                    cx="85"
                    cy="85"
                    fill="#FFFAF0"
                    r="85"
                  />
                  <path
                    d="M106.868 123c0-4.828-3.919-8.747-8.747-8.747H71.879c-4.828 0-8.747 3.919-8.747 8.747h43.736z"
                    fill="#FBD38D"
                  />
                  <path
                    d="M80.626 103.756V123h8.748v-19.244h-8.748z"
                    fill="#FBD38D"
                  />
                  <clippath
                    id="trophy_svg__b"
                  >
                    <path
                      d="M45.638 61.77h17.494v17.494H45.638z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#trophy_svg__b)"
                  >
                    <circle
                      cx="63.132"
                      cy="61.77"
                      fill="#FBD38D"
                      r="17.494"
                    />
                  </g>
                  <clippath
                    id="trophy_svg__c"
                  >
                    <path
                      d="M106.868 61.77h17.494v17.494h-17.494z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#trophy_svg__c)"
                  >
                    <circle
                      cx="106.868"
                      cy="61.77"
                      fill="#FBD38D"
                      r="17.494"
                    />
                  </g>
                  <path
                    d="M106.868 53.022H63.132v30.616c0 12.069 9.799 21.868 21.868 21.868 12.069 0 21.868-9.799 21.868-21.868V53.022z"
                    fill="#ED8936"
                  />
                  <path
                    d="M85 65.398l2.806 8.638h9.082l-7.347 5.338 2.806 8.637L85 82.673l-7.347 5.338 2.806-8.637-7.347-5.338h9.082L85 65.398z"
                    fill="#fff"
                  />
                </g>
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h4
                class="font-bold"
              >
                Microsoft Hackaton
              </h4>
              <p>
                I created most creative application
              </p>
              <p
                class="block lg:hidden italic"
              >
                - 
                12 Jul, 2021
              </p>
            </div>
            <span
              class="italic text-sm hidden lg:block whitespace-nowrap"
            >
              -
              12 Jul, 2021
            </span>
          </div>
          <div
            class="grid items-center grid-cols-1 lg:grid-cols-[100px_1fr_100px] gap-6"
            role="listitem"
          >
            <div
              class="hidden lg:block"
            >
              <svg
                clip-rule="evenodd"
                fill-rule="evenodd"
                stroke-linejoin="round"
                stroke-miterlimit="1.414"
                viewBox="0 0 170 170"
              >
                <path
                  d="M0 0h170v170H0z"
                  fill="none"
                />
                <clippath
                  id="certificate_svg__a"
                >
                  <path
                    d="M0 0h170v170H0z"
                  />
                </clippath>
                <g
                  clip-path="url(#certificate_svg__a)"
                >
                  <circle
                    cx="85"
                    cy="85"
                    fill="#F0FFF4"
                    r="85"
                  />
                  <path
                    d="M64.829 58h40v52.335h-40z"
                    fill="#68D391"
                  />
                  <clippath
                    id="certificate_svg__b"
                  >
                    <path
                      d="M64.829 52h53.33v10h-53.33z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#certificate_svg__b)"
                  >
                    <path
                      d="M118.159 58.664A6.667 6.667 0 00111.495 52H71.492a6.667 6.667 0 00-6.663 6.664v6.672A6.667 6.667 0 0071.492 72h40.003a6.667 6.667 0 006.664-6.664v-6.672z"
                      fill="#68D391"
                    />
                  </g>
                  <clippath
                    id="certificate_svg__c"
                  >
                    <path
                      d="M51.5 107h53.33v10H51.5z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#certificate_svg__c)"
                  >
                    <path
                      d="M104.83 110.336A6.667 6.667 0 0198.166 117H58.164a6.667 6.667 0 01-6.664-6.664v-6.672A6.667 6.667 0 0158.164 97h40.002a6.667 6.667 0 016.664 6.664v6.672z"
                      fill="#38A169"
                    />
                  </g>
                  <clippath
                    id="certificate_svg__d"
                  >
                    <path
                      d="M91.5 107h13.33v10H91.5z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#certificate_svg__d)"
                  >
                    <path
                      d="M104.83 110.335c0 3.679-2.986 6.665-6.665 6.665s-6.665-2.986-6.665-6.665v-6.67c0-3.679 2.986-6.665 6.665-6.665s6.665 2.986 6.665 6.665v6.67z"
                      fill="#68D391"
                    />
                  </g>
                  <clippath
                    id="certificate_svg__e"
                  >
                    <path
                      d="M104.829 52h13.33v10h-13.33z"
                    />
                  </clippath>
                  <g
                    clip-path="url(#certificate_svg__e)"
                  >
                    <path
                      d="M118.159 58.665A6.668 6.668 0 00111.494 52a6.668 6.668 0 00-6.665 6.665v6.67A6.668 6.668 0 00111.494 72a6.668 6.668 0 006.665-6.665v-6.67z"
                      fill="#38A169"
                    />
                  </g>
                  <path
                    d="M84.829 71.194l2.806 8.637h9.082l-7.347 5.338 2.806 8.637-7.347-5.338-7.348 5.338 2.807-8.637-7.348-5.338h9.082l2.807-8.637z"
                    fill="#fff"
                  />
                </g>
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h4
                class="font-bold"
              >
                Harvard Business School
              </h4>
              <p>
                I created an amazing payment app
              </p>
              <p
                class="block lg:hidden italic"
              >
                - 
                10 Jul, 2019
              </p>
            </div>
            <span
              class="italic text-sm hidden lg:block whitespace-nowrap"
            >
              -
              10 Jul, 2019
            </span>
          </div>
          <div
            class="grid items-center grid-cols-1 lg:grid-cols-[100px_1fr_100px] gap-6"
            role="listitem"
          >
            <div
              class="hidden lg:block"
            >
              <svg
                clip-rule="evenodd"
                fill-rule="evenodd"
                stroke-linejoin="round"
                stroke-miterlimit="1.414"
                viewBox="0 0 170 170"
              >
                <path
                  d="M0 0h170v170H0z"
                  fill="none"
                />
                <clippath
                  id="lock_svg__a"
                >
                  <path
                    d="M0 0h170v170H0z"
                  />
                </clippath>
                <g
                  clip-path="url(#lock_svg__a)"
                >
                  <circle
                    cx="85"
                    cy="85"
                    fill="#EBF8FF"
                    r="85"
                  />
                  <path
                    d="M85.129 46l.129.002.129.002.129.003.128.003.129.005.128.005.128.006.127.007.128.008.127.008.127.009.127.01.126.011.127.012.126.012.126.014.125.014.126.014.125.016.125.016.124.017.125.018.124.019.124.019.124.02.123.021.123.022.123.022.123.023.122.024.123.025.121.025.122.026.121.027.121.028.121.028.121.029.12.03.12.03.119.031.12.032.119.033.119.033.118.034.118.035.118.036.118.036.117.037.117.037.116.039.117.039.116.039.115.041.116.041.115.041.114.043.115.043.114.044.113.044.227.091.225.094.223.096.223.099.22.101.22.104.217.107.217.109.215.112.213.114.212.117.21.119.208.122.207.124.206.127.204.129.202.131.2.134.199.136.197.138.195.141.193.142.192.146.19.147.188.15.186.151.184.154.183.157.18.158.179.16.176.163.175.164.173.167.17.169.169.17.167.173.164.175.163.176.16.179.158.18.157.183.154.184.151.186.15.188.147.19.146.192.142.193.141.195.138.197.136.199.134.2.131.202.129.204.127.206.124.207.122.208.119.21.117.212.114.213.112.215.109.217.107.217.104.22.101.22.099.223.096.223.094.225.091.227.044.113.044.114.043.115.043.114.041.115.041.116.041.115.039.116.039.117.039.116.037.117.037.117.036.118.036.118.035.118.034.118.033.119.033.119.032.12.031.119.03.12.03.12.029.121.028.121.028.121.027.121.026.122.025.121.025.123.024.122.023.123.022.123.022.123.021.123.02.124.019.124.019.124.018.125.017.124.016.125.016.125.014.126.014.125.014.126.012.126.012.127.011.126.01.127.009.127.008.127.008.128.007.127.006.128.005.128.005.129.003.128.003.129.002.129.002.129V101H65V65.871l.002-.129.002-.129.003-.129.003-.128.005-.129.005-.128.006-.128.007-.127.008-.128.008-.127.009-.127.01-.127.011-.126.012-.127.012-.126.014-.126.014-.125.014-.126.016-.125.016-.125.017-.124.018-.125.019-.124.019-.124.02-.124.021-.123.022-.123.022-.123.023-.123.024-.122.025-.123.025-.121.026-.122.027-.121.028-.121.028-.121.029-.121.03-.12.03-.12.031-.119.032-.12.033-.119.033-.119.034-.118.035-.118.036-.118.036-.118.037-.117.037-.117.039-.116.039-.117.039-.116.041-.115.041-.116.041-.115.043-.114.043-.115.044-.114.044-.113.091-.227.094-.225.096-.223.099-.223.101-.22.104-.22.107-.217.109-.217.112-.215.114-.213.117-.212.119-.21.122-.208.124-.207.127-.206.129-.204.131-.202.134-.2.136-.199.138-.197.141-.195.142-.193.146-.192.147-.19.15-.188.151-.186.154-.184.157-.183.158-.18.16-.179.163-.176.164-.175.167-.173.169-.17.17-.169.173-.167.175-.164.176-.163.179-.16.18-.158.183-.157.184-.154.186-.151.188-.15.19-.147.192-.146.193-.142.195-.141.197-.138.199-.136.2-.134.202-.131.204-.129.206-.127.207-.124.208-.122.21-.119.212-.117.213-.114.215-.112.217-.109.217-.107.22-.104.22-.101.223-.099.223-.096.225-.094.227-.091.113-.044.114-.044.115-.043.114-.043.115-.041.116-.041.115-.041.116-.039.117-.039.116-.039.117-.037.117-.037.118-.036.118-.036.118-.035.118-.034.119-.033.119-.033.12-.032.119-.031.12-.03.12-.03.121-.029.121-.028.121-.028.121-.027.122-.026.121-.025.123-.025.122-.024.123-.023.123-.022.123-.022.123-.021.124-.02.124-.019.124-.019.125-.018.124-.017.125-.016.125-.016.126-.014.125-.014.126-.014.126-.012.127-.012.126-.011.127-.01.127-.009.127-.008.128-.008.127-.007.128-.006.128-.005.129-.005.128-.003.129-.003.129-.002.129-.002h.258zm-.195 10l-.065.001-.065.001-.067.001-.064.002-.065.003-.065.002-.064.003-.065.004-.065.004-.064.004-.063.005-.064.005-.063.005-.064.006-.063.006-.062.007-.064.007-.063.007-.062.008-.062.008-.063.008-.062.009-.062.01-.062.009-.062.01-.061.011-.061.01-.061.012-.061.011-.061.012-.06.012-.061.013-.061.013-.06.013-.06.014-.06.014-.06.014-.059.015-.059.015-.06.016-.06.016-.058.016-.059.016-.059.017-.059.017-.057.018-.059.018-.059.018-.058.019-.058.019-.057.019-.057.02-.058.02-.057.02-.056.021-.058.021-.057.021-.056.022-.042.017-.127.051-.112.046-.111.048-.11.049-.11.05-.11.052-.108.053-.108.055-.107.056-.106.057-.106.058-.105.06-.105.06-.103.062-.103.064-.102.065-.101.065-.1.067-.1.068-.099.07-.098.07-.097.072-.096.073-.096.074-.094.075-.094.076-.093.078-.092.079-.09.079-.09.081-.089.082-.088.083-.087.084-.086.085-.085.086-.084.087-.083.088-.082.089-.081.09-.079.09-.079.092-.077.093-.077.094-.075.094-.074.096-.073.096-.071.097-.071.098-.07.099-.068.1-.067.1-.066.101-.064.102-.064.103-.062.104-.061.104-.059.105-.058.106-.057.106-.056.107-.055.108-.053.109-.051.108-.051.111-.049.11-.048.111-.047.112-.05.126-.016.042-.023.057-.021.058-.021.056-.021.057-.02.057-.02.058-.02.058-.019.056-.019.058-.019.059-.018.058-.018.058-.018.059-.017.059-.017.057-.016.059-.017.06-.015.058-.016.061-.015.06-.015.058-.014.059-.014.062-.014.06-.013.059-.013.059-.013.062-.012.061-.012.062-.011.059-.011.061-.011.063-.011.06-.01.062-.009.063-.01.061-.008.061-.009.062-.008.064-.008.063-.007.062-.007.064-.007.061-.006.064-.006.063-.005.065-.006.063-.004.064-.004.064-.004.064-.004.065-.003.063-.002.066-.003.065-.002.065-.001.065-.001.065-.001.066V91h20V65.934l-.001-.066-.001-.065-.001-.065-.002-.066-.002-.064-.003-.064-.003-.065-.004-.065-.004-.064-.004-.064-.005-.064-.005-.063-.005-.063-.006-.065-.006-.064-.007-.063-.007-.062-.007-.062-.008-.063-.008-.062-.009-.064-.008-.061-.01-.061-.009-.063-.01-.062-.011-.061-.011-.062-.011-.061-.011-.06-.012-.061-.012-.061-.013-.06-.013-.059-.013-.063-.014-.06-.014-.058-.014-.06-.015-.061-.015-.06-.015-.057-.016-.06-.017-.06-.016-.057-.017-.061-.018-.058-.017-.058-.018-.058-.018-.058-.019-.059-.019-.056-.019-.058-.02-.058-.02-.058-.02-.057-.021-.057-.021-.058-.021-.056-.022-.056-.016-.042-.051-.127-.047-.112-.048-.111-.049-.111-.05-.109-.052-.109-.054-.109-.054-.108-.056-.107-.057-.106-.058-.106-.06-.106-.06-.103-.062-.104-.064-.102-.064-.102-.066-.102-.067-.1-.068-.1-.07-.099-.07-.098-.072-.097-.073-.096-.074-.096-.075-.094-.077-.094-.077-.093-.079-.091-.079-.091-.081-.09-.082-.089-.083-.088-.084-.087-.085-.086-.086-.085-.087-.084-.088-.083-.089-.082-.089-.08-.092-.08-.092-.079-.092-.077-.094-.077-.094-.075-.095-.074-.097-.073-.097-.072-.098-.07-.099-.069-.1-.069-.1-.067-.101-.066-.102-.064-.103-.063-.103-.063-.105-.061-.105-.059-.106-.058-.106-.057-.107-.056-.108-.055-.109-.053-.109-.051-.11-.051-.11-.049-.111-.048-.112-.046-.127-.052-.042-.016-.056-.022-.057-.021-.057-.021-.057-.021-.057-.02-.058-.02-.057-.02-.057-.019-.059-.019-.058-.019-.058-.018-.058-.018-.059-.018-.058-.017-.059-.017-.058-.016-.059-.016-.06-.016-.06-.016-.058-.015-.06-.015-.06-.014-.06-.014-.06-.014-.06-.013-.061-.013-.061-.013-.059-.012-.062-.012-.061-.011-.061-.012-.062-.01-.06-.011-.062-.01-.062-.009-.062-.01-.062-.009-.063-.008-.062-.008-.062-.008-.063-.007-.064-.007-.062-.007-.063-.006-.064-.006-.063-.005-.064-.005-.063-.005-.065-.004-.064-.004-.065-.004-.064-.003-.065-.002-.065-.003-.064-.002-.067-.001-.065-.001-.065-.001h-.132z"
                    fill="#63B3ED"
                  />
                  <path
                    d="M115 81c0-2.76-2.24-5-5-5H60c-2.76 0-5 2.24-5 5v30c0 2.76 2.24 5 5 5h50c2.76 0 5-2.24 5-5V81z"
                    fill="#3182CE"
                  />
                  <path
                    d="M85 83l2.806 8.637h9.082l-7.347 5.338 2.806 8.638L85 100.275l-7.347 5.338 2.806-8.638-7.347-5.338h9.082L85 83z"
                    fill="#fff"
                  />
                </g>
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h4
                class="font-bold"
              >
                Search Engine Bug
              </h4>
              <p>
                I found a bug in search engine
              </p>
              <p
                class="block lg:hidden italic"
              >
                - 
                15 Feb, 2021
              </p>
            </div>
            <span
              class="italic text-sm hidden lg:block whitespace-nowrap"
            >
              -
              15 Feb, 2021
            </span>
          </div>
          <div
            class="grid items-center grid-cols-1 lg:grid-cols-[100px_1fr_100px] gap-6"
            role="listitem"
          >
            <div
              class="hidden lg:block"
            >
              <svg
                clip-rule="evenodd"
                fill-rule="evenodd"
                stroke-linejoin="round"
                stroke-miterlimit="2"
                viewBox="0 0 170 170"
              >
                <path
                  d="M.87 0h170v170H.87z"
                  fill="none"
                />
                <clippath
                  id="briefcase_svg__a"
                >
                  <path
                    d="M.87 0h170v170H.87z"
                  />
                </clippath>
                <g
                  clip-path="url(#briefcase_svg__a)"
                >
                  <circle
                    cx="85.662"
                    cy="85.208"
                    fill="#fff5f5"
                    r="84.792"
                  />
                  <path
                    d="M100.795 44.028l.087.002.087.003.087.003.087.005.086.006.086.007.086.009.085.009.085.01.085.011.085.013.084.013.083.015.084.015.083.017.082.017.083.019.082.019.081.02.081.022.081.022.08.024.08.024.08.025.079.027.078.027.079.028.077.029.078.03.077.031.076.032.076.032.075.034.075.034.075.036.074.036.073.037.073.038.072.039.072.039.072.041.071.041.07.042.07.043.069.044.068.044.068.046.068.046.067.047.066.048.066.048.065.05.064.05.064.05.063.052.063.052.062.053.061.054.06.054.06.056.06.055.058.057.058.057.058.058.056.059.056.059.055.06.055.061.053.061.053.062.053.063.051.063.051.064.05.064.049.065.049.066.048.066.047.067.046.067.045.068.045.069.043.069.043.07.043.07.041.071.04.071.04.072.039.073.038.073.037.073.036.074.035.074.035.075.033.076.033.076.032.076.031.077.03.077.029.078.028.078.027.079.026.079.026.079.024.08.023.081.023.08.021.081.021.082.019.082.019.082.017.083.016.083.016.083.014.084.014.084.012.085.011.084.011.085.009.086.008.085.007.086.006.087.005.086.004.087.003.087.001.088.001.088v41.255l-.001.087-.001.088-.003.087-.004.087-.005.087-.006.086-.007.086-.008.086-.009.085-.011.085-.011.085-.012.084-.014.084-.014.084-.016.083-.016.083-.017.083-.019.082-.019.082-.021.082-.021.081-.023.081-.023.08-.024.08-.026.08-.026.079-.027.078-.028.078-.029.078-.03.077-.031.077-.032.077-.033.076-.033.075-.035.075-.035.074-.036.074-.037.074-.038.073-.039.072-.04.072-.04.071-.041.071-.043.071-.043.069-.043.069-.045.069-.045.068-.046.067-.047.067-.048.067-.049.065-.049.065-.05.065-.051.064-.051.063-.053.062-.053.062-.053.062-.055.06-.055.06-.056.06-.056.058-.058.058-.058.057-.058.057-.06.056-.06.055-.06.054-.061.054-.062.053-.063.052-.063.052-.064.051-.064.05-.065.049-.066.049-.066.047-.067.047-.068.047-.068.045-.068.044-.069.044-.07.043-.07.042-.071.042-.072.04-.072.04-.072.039-.073.038-.073.037-.074.036-.075.035-.075.035-.075.033-.076.033-.076.032-.077.031-.078.029-.077.029-.079.029-.078.027-.079.026-.08.025-.08.025-.08.023-.081.022-.081.022-.081.02-.082.02-.083.018-.082.018-.083.016-.084.016-.083.014-.084.014-.085.012-.085.011-.085.01-.085.01-.086.008-.086.007-.086.006-.087.005-.087.004-.087.003-.087.001-.088.001H70.618l-.088-.001-.087-.001-.088-.003-.086-.004-.087-.005-.086-.006-.086-.007-.086-.008-.085-.01-.086-.01-.084-.011-.085-.012-.084-.014-.084-.014-.083-.016-.083-.016-.083-.018-.082-.018-.082-.02-.081-.02-.081-.022-.081-.022-.081-.023-.079-.025-.08-.025-.079-.026-.079-.027-.078-.029-.078-.029-.077-.029-.077-.031-.076-.032-.076-.033-.076-.033-.074-.035-.075-.035-.074-.036-.073-.037-.073-.038-.073-.039-.072-.04-.071-.04-.071-.042-.07-.042-.07-.043-.069-.044-.068-.044-.069-.045-.067-.047-.067-.047-.066-.047-.066-.049-.065-.049-.064-.05-.064-.051-.063-.052-.063-.052-.062-.053-.061-.054-.061-.054-.06-.055-.059-.056-.059-.057-.058-.057-.057-.058-.056-.058-.056-.06-.055-.06-.055-.06-.054-.062-.053-.062-.052-.062-.051-.063-.051-.064-.05-.065-.05-.065-.048-.065-.048-.067-.047-.067-.046-.067-.045-.068-.045-.069-.044-.069-.043-.069-.042-.071-.041-.071-.041-.071-.039-.072-.039-.072-.038-.073-.037-.074-.036-.074-.036-.074-.034-.075-.034-.075-.032-.076-.032-.077-.031-.077-.03-.077-.029-.078-.028-.078-.027-.078-.026-.079-.026-.08-.024-.08-.023-.08-.023-.081-.021-.081-.021-.082-.019-.082-.019-.082-.017-.083-.017-.083-.015-.083-.015-.084-.013-.084-.012-.084-.012-.085-.01-.085-.009-.085-.008-.086-.007-.086-.006-.086-.005-.087-.004-.087-.003-.087-.002-.088V50.73l.002-.088.003-.087.004-.087.005-.086.006-.087.007-.086.008-.085.009-.086.01-.085.012-.084.012-.085.013-.084.015-.084.015-.083.017-.083.017-.083.019-.082.019-.082.021-.082.021-.081.023-.08.023-.081.024-.08.026-.079.026-.079.027-.079.028-.078.029-.078.03-.077.031-.077.032-.076.032-.076.034-.076.034-.075.036-.074.036-.074.037-.073.038-.073.039-.073.039-.072.041-.071.041-.071.042-.07.043-.07.044-.069.045-.069.045-.068.046-.067.047-.067.048-.066.048-.066.05-.065.05-.064.051-.064.051-.063.052-.063.053-.062.054-.061.055-.061.055-.06.056-.059.056-.059.057-.058.058-.057.059-.057.059-.055.06-.056.061-.054.061-.054.062-.053.063-.052.063-.052.064-.05.064-.05.065-.05.066-.048.066-.048.067-.047.067-.046.069-.046.068-.044.069-.044.07-.043.07-.042.071-.041.071-.041.072-.039.073-.039.073-.038.073-.037.074-.036.075-.036.074-.034.076-.034.076-.032.076-.032.077-.031.077-.03.078-.029.078-.028.079-.027.079-.027.08-.025.079-.024.081-.024.081-.022.081-.022.081-.02.082-.019.082-.019.083-.017.083-.017.083-.015.084-.015.084-.013.085-.013.084-.011.086-.01.085-.009.086-.009.086-.007.086-.006.087-.005.086-.003.088-.003.087-.002h30.265zm-26.967 10v34.835h23.669V54.028H73.828z"
                    fill="#9b2c2c"
                  />
                  <path
                    d="M130.965 68.365a6.793 6.793 0 00-6.79-6.79H47.15a6.793 6.793 0 00-6.79 6.79v45.103a6.793 6.793 0 006.79 6.79h77.025a6.793 6.793 0 006.79-6.79V68.365z"
                    fill="#f56565"
                  />
                  <path
                    d="M85.662 79.55l2.807 8.637h9.082l-7.348 5.338 2.807 8.637-7.348-5.338-7.347 5.338 2.807-8.637-7.348-5.338h9.082l2.806-8.637z"
                    fill="#fff"
                  />
                </g>
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h4
                class="font-bold"
              >
                The best developer in the company
              </h4>
              <p>
                I have done all projects successfully
              </p>
              <p
                class="block lg:hidden italic"
              >
                - 
                15 Oct, 2022
              </p>
            </div>
            <span
              class="italic text-sm hidden lg:block whitespace-nowrap"
            >
              -
              15 Oct, 2022
            </span>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
        >
          <span
            class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
          >
            <li>
              <a
                class="mr-4 hover:underline md:mr-6 "
                href="#"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Licensing
              </a>
            </li>
            <li>
              <a
                class="hover:underline"
                href="#"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`HomeScreen renders the home screen 1`] = `
<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div
      class="container py-10"
    >
      <div
        class="space-y-6 flex flex-col py-3 items-start"
      >
        <h1
          class="font-bold font-heading text-3xl"
        >
          Hi, I’m Yony Calsin.
        </h1>
        <p
          class="font-heading text-lg"
        >
          I’m a software developer from 
          <b>
            Perú
          </b>
          . I work at
           
          <span>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline inline-flex items-center"
              href="https://www.linkedin.com/company/making-sense-llc"
              rel="noreferrer"
              role="link"
              target="_blank"
            >
              Making Sense
            </a>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0 align-top"
              fill="none"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="7"
                x2="17"
                y1="17"
                y2="7"
              />
              <polyline
                points="7 7 17 7 17 17"
              />
            </svg>
          </span>
           as a
           
          <b>
            Frontend Developer.
          </b>
          <a
            class="emotion-0"
            href=""
          >
            hola
          </a>
        </p>
        <div
          class="flex flex-wrap gap-3"
        >
          <a
            href="https://www.linkedin.com/in/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-primary-700 hover:text-white border-primary-700 hover:bg-primary-800 focus:ring-primary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Linkedin
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://github.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none  text-success-700 hover:text-white border-success-700 hover:bg-success-800 focus:ring-success-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.435 12.973c.269 0 .492.133.686.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.193.265-.417.396-.686.396-.278 0-.522-.131-.715-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.192-.264.436-.396.715-.396m3.44-3.559c.746.811 1.125 1.795 1.125 2.953 0 .748-.086 1.423-.259 2.023-.175.597-.394 1.084-.654 1.459-.264.376-.588.705-.974.989-.386.286-.741.492-1.065.623-.325.132-.695.233-1.111.306-.417.071-.726.111-.943.123l-.685.014-.547.015c-.301.013-.56.016-.762.016s-.461-.003-.762-.016l-.547-.015-.685-.014c-.218-.012-.526-.052-.943-.123-.423-.072-.786-.174-1.111-.306-.324-.131-.68-.337-1.064-.623-.387-.284-.711-.613-.975-.989-.261-.375-.479-.862-.654-1.459-.173-.6-.259-1.275-.259-2.023 0-1.158.379-2.143 1.125-2.953-.082-.041-.085-.447-.008-1.217.063-.771.227-1.482.495-2.132.934.099 2.09.629 3.471 1.581.466-.119 1.101-.183 1.917-.183.852 0 1.491.064 1.918.184.629-.425 1.23-.771 1.805-1.034.584-.261 1.005-.416 1.269-.457l.396-.09c.27.649.434 1.36.496 2.132.076.769.073 1.175-.009 1.216m-5.845 7.82c1.688 0 2.954-.202 3.821-.607.855-.404 1.292-1.238 1.292-2.496 0-.73-.273-1.34-.822-1.828-.278-.263-.613-.425-.989-.486-.375-.061-.949-.061-1.72 0-.769.062-1.298.09-1.582.09-.385 0-.8-.018-1.319-.059-.52-.04-.928-.065-1.223-.078-.294-.009-.609.027-.958.108-.345.082-.629.224-.853.425-.521.469-.79 1.077-.79 1.828 0 1.258.426 2.092 1.28 2.496.85.405 2.113.607 3.802.607h.061m-2.434-4.261c.268 0 .492.133.685.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.192.265-.417.396-.685.396-.279 0-.522-.131-.716-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.193-.264.436-.396.716-.396"
                  />
                </svg>
              </div>
              Github
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://twitter.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-secondary-700 hover:text-white border-secondary-700 hover:bg-secondary-800 focus:ring-secondary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Twitter
              <div
                class="ml-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.89 7.012c.808-.496 1.343-1.173 1.605-2.034-.786.417-1.569.703-2.351.861-.703-.756-1.593-1.14-2.66-1.14-1.043 0-1.924.366-2.643 1.078-.715.717-1.076 1.588-1.076 2.605 0 .309.039.585.117.819-3.076-.105-5.622-1.381-7.628-3.837-.34.601-.51 1.213-.51 1.846 0 1.301.549 2.332 1.645 3.089-.625-.053-1.176-.211-1.645-.47 0 .929.273 1.705.82 2.388.549.676 1.254 1.107 2.115 1.291-.312.08-.641.118-.979.118-.312 0-.533-.026-.664-.083.23.757.664 1.371 1.291 1.841.625.472 1.344.721 2.152.743-1.332 1.045-2.855 1.562-4.578 1.562-.422 0-.721-.006-.902-.038 1.697 1.102 3.586 1.649 5.676 1.649 2.139 0 4.029-.542 5.674-1.626 1.645-1.078 2.859-2.408 3.639-3.974.784-1.564 1.172-3.192 1.172-4.892v-.468c.758-.57 1.371-1.212 1.84-1.921-.68.293-1.383.492-2.11.593z"
                  />
                </svg>
              </div>
            </button>
          </a>
        </div>
      </div>
    </div>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
        >
          <span
            class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
          >
            <li>
              <a
                class="mr-4 hover:underline md:mr-6 "
                href="#"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Licensing
              </a>
            </li>
            <li>
              <a
                class="hover:underline"
                href="#"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`HomeScreen renders the pinned projects section 1`] = `
<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div
      class="container py-10"
    >
      <div
        class="space-y-6 flex flex-col py-3 items-start"
      >
        <h1
          class="font-bold font-heading text-3xl"
        >
          Hi, I’m Yony Calsin.
        </h1>
        <p
          class="font-heading text-lg"
        >
          I’m a software developer from 
          <b>
            Perú
          </b>
          . I work at
           
          <span>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline inline-flex items-center"
              href="https://www.linkedin.com/company/making-sense-llc"
              rel="noreferrer"
              role="link"
              target="_blank"
            >
              Making Sense
            </a>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0 align-top"
              fill="none"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="7"
                x2="17"
                y1="17"
                y2="7"
              />
              <polyline
                points="7 7 17 7 17 17"
              />
            </svg>
          </span>
           as a
           
          <b>
            Frontend Developer.
          </b>
          <a
            class="emotion-0"
            href=""
          >
            hola
          </a>
        </p>
        <div
          class="flex flex-wrap gap-3"
        >
          <a
            href="https://www.linkedin.com/in/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-primary-700 hover:text-white border-primary-700 hover:bg-primary-800 focus:ring-primary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Linkedin
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://github.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none  text-success-700 hover:text-white border-success-700 hover:bg-success-800 focus:ring-success-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.435 12.973c.269 0 .492.133.686.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.193.265-.417.396-.686.396-.278 0-.522-.131-.715-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.192-.264.436-.396.715-.396m3.44-3.559c.746.811 1.125 1.795 1.125 2.953 0 .748-.086 1.423-.259 2.023-.175.597-.394 1.084-.654 1.459-.264.376-.588.705-.974.989-.386.286-.741.492-1.065.623-.325.132-.695.233-1.111.306-.417.071-.726.111-.943.123l-.685.014-.547.015c-.301.013-.56.016-.762.016s-.461-.003-.762-.016l-.547-.015-.685-.014c-.218-.012-.526-.052-.943-.123-.423-.072-.786-.174-1.111-.306-.324-.131-.68-.337-1.064-.623-.387-.284-.711-.613-.975-.989-.261-.375-.479-.862-.654-1.459-.173-.6-.259-1.275-.259-2.023 0-1.158.379-2.143 1.125-2.953-.082-.041-.085-.447-.008-1.217.063-.771.227-1.482.495-2.132.934.099 2.09.629 3.471 1.581.466-.119 1.101-.183 1.917-.183.852 0 1.491.064 1.918.184.629-.425 1.23-.771 1.805-1.034.584-.261 1.005-.416 1.269-.457l.396-.09c.27.649.434 1.36.496 2.132.076.769.073 1.175-.009 1.216m-5.845 7.82c1.688 0 2.954-.202 3.821-.607.855-.404 1.292-1.238 1.292-2.496 0-.73-.273-1.34-.822-1.828-.278-.263-.613-.425-.989-.486-.375-.061-.949-.061-1.72 0-.769.062-1.298.09-1.582.09-.385 0-.8-.018-1.319-.059-.52-.04-.928-.065-1.223-.078-.294-.009-.609.027-.958.108-.345.082-.629.224-.853.425-.521.469-.79 1.077-.79 1.828 0 1.258.426 2.092 1.28 2.496.85.405 2.113.607 3.802.607h.061m-2.434-4.261c.268 0 .492.133.685.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.192.265-.417.396-.685.396-.279 0-.522-.131-.716-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.193-.264.436-.396.716-.396"
                  />
                </svg>
              </div>
              Github
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://twitter.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-secondary-700 hover:text-white border-secondary-700 hover:bg-secondary-800 focus:ring-secondary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Twitter
              <div
                class="ml-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.89 7.012c.808-.496 1.343-1.173 1.605-2.034-.786.417-1.569.703-2.351.861-.703-.756-1.593-1.14-2.66-1.14-1.043 0-1.924.366-2.643 1.078-.715.717-1.076 1.588-1.076 2.605 0 .309.039.585.117.819-3.076-.105-5.622-1.381-7.628-3.837-.34.601-.51 1.213-.51 1.846 0 1.301.549 2.332 1.645 3.089-.625-.053-1.176-.211-1.645-.47 0 .929.273 1.705.82 2.388.549.676 1.254 1.107 2.115 1.291-.312.08-.641.118-.979.118-.312 0-.533-.026-.664-.083.23.757.664 1.371 1.291 1.841.625.472 1.344.721 2.152.743-1.332 1.045-2.855 1.562-4.578 1.562-.422 0-.721-.006-.902-.038 1.697 1.102 3.586 1.649 5.676 1.649 2.139 0 4.029-.542 5.674-1.626 1.645-1.078 2.859-2.408 3.639-3.974.784-1.564 1.172-3.192 1.172-4.892v-.468c.758-.57 1.371-1.212 1.84-1.921-.68.293-1.383.492-2.11.593z"
                  />
                </svg>
              </div>
            </button>
          </a>
        </div>
      </div>
      <hr
        class="opacity-[0.6] border-gray-300 border-solid w-full border-b-[1px] my-6"
      />
      <div
        class="py-3 space-y-3"
      >
        <div>
          <div
            class="flex items-center justify-between relative"
          >
            <h1
              class="font-bold font-heading text-xl"
            >
              Featured Projects
            </h1>
            <a
              href="/projects"
            >
              See more
            </a>
          </div>
          <p
            class="mt-3"
          >
            List of some featured projects.
          </p>
        </div>
        <div
          aria-label="List of featured projects"
          class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-4"
          role="list"
        >
          <a
            href="/projects#React%20Hook%20Form"
          >
            <div
              class="bg-white shadow-card px-4 py-2 rounded-lg border-transparent border-2 hover:border-primary-600 cursor-pointer h-full"
              role="listitem"
            >
              <div
                class="space-y-3"
              >
                <div
                  class="flex flex-row items-center space-x-3"
                >
                  <svg
                    class="w-4 h-4 inline-block leading-4 shrink-0 fill-success-900"
                    fill="currentColor"
                    height="1em"
                    role="icon"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 640 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M488 192H336v56c0 39.7-32.3 72-72 72s-72-32.3-72-72V126.4l-64.9 39C107.8 176.9 96 197.8 96 220.2v47.3l-80 46.2C.7 322.5-4.6 342.1 4.3 357.4l80 138.6c8.8 15.3 28.4 20.5 43.7 11.7L231.4 448H368c35.3 0 64-28.7 64-64h16c17.7 0 32-14.3 32-32v-64h8c13.3 0 24-10.7 24-24v-48c0-13.3-10.7-24-24-24zm147.7-37.4L555.7 16C546.9.7 527.3-4.5 512 4.3L408.6 64H306.4c-12 0-23.7 3.4-33.9 9.7L239 94.6c-9.4 5.8-15 16.1-15 27.1V248c0 22.1 17.9 40 40 40s40-17.9 40-40v-88h184c30.9 0 56 25.1 56 56v28.5l80-46.2c15.3-8.9 20.5-28.4 11.7-43.7z"
                    />
                  </svg>
                  <h1
                    class="font-bold font-heading text-base line-clamp-1"
                  >
                    react-hook-form
                  </h1>
                </div>
                <p
                  class="text-sm italic line-clamp-2"
                >
                  A library to handle form validations with react hooks
                </p>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
        >
          <span
            class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
          >
            <li>
              <a
                class="mr-4 hover:underline md:mr-6 "
                href="#"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Licensing
              </a>
            </li>
            <li>
              <a
                class="hover:underline"
                href="#"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`HomeScreen renders the recommendations section 1`] = `
<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="w-full z-10 shadow-sm"
    >
      <div
        class="container py-5 md:py-6 flex justify-between items-center"
      >
        <a
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </a>
        <div
          class="space-x-4"
        >
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div
      class="container py-10"
    >
      <div
        class="space-y-6 flex flex-col py-3 items-start"
      >
        <h1
          class="font-bold font-heading text-3xl"
        >
          Hi, I’m Yony Calsin.
        </h1>
        <p
          class="font-heading text-lg"
        >
          I’m a software developer from 
          <b>
            Perú
          </b>
          . I work at
           
          <span>
            <a
              class="font-medium text-primary-600 dark:text-primary-500 hover:underline inline-flex items-center"
              href="https://www.linkedin.com/company/making-sense-llc"
              rel="noreferrer"
              role="link"
              target="_blank"
            >
              Making Sense
            </a>
            <svg
              class="w-4 h-4 inline-block leading-4 shrink-0 align-top"
              fill="none"
              height="1em"
              role="icon"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="7"
                x2="17"
                y1="17"
                y2="7"
              />
              <polyline
                points="7 7 17 7 17 17"
              />
            </svg>
          </span>
           as a
           
          <b>
            Frontend Developer.
          </b>
          <a
            class="emotion-0"
            href=""
          >
            hola
          </a>
        </p>
        <div
          class="flex flex-wrap gap-3"
        >
          <a
            href="https://www.linkedin.com/in/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-primary-700 hover:text-white border-primary-700 hover:bg-primary-800 focus:ring-primary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Linkedin
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://github.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none  text-success-700 hover:text-white border-success-700 hover:bg-success-800 focus:ring-success-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.435 12.973c.269 0 .492.133.686.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.193.265-.417.396-.686.396-.278 0-.522-.131-.715-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.192-.264.436-.396.715-.396m3.44-3.559c.746.811 1.125 1.795 1.125 2.953 0 .748-.086 1.423-.259 2.023-.175.597-.394 1.084-.654 1.459-.264.376-.588.705-.974.989-.386.286-.741.492-1.065.623-.325.132-.695.233-1.111.306-.417.071-.726.111-.943.123l-.685.014-.547.015c-.301.013-.56.016-.762.016s-.461-.003-.762-.016l-.547-.015-.685-.014c-.218-.012-.526-.052-.943-.123-.423-.072-.786-.174-1.111-.306-.324-.131-.68-.337-1.064-.623-.387-.284-.711-.613-.975-.989-.261-.375-.479-.862-.654-1.459-.173-.6-.259-1.275-.259-2.023 0-1.158.379-2.143 1.125-2.953-.082-.041-.085-.447-.008-1.217.063-.771.227-1.482.495-2.132.934.099 2.09.629 3.471 1.581.466-.119 1.101-.183 1.917-.183.852 0 1.491.064 1.918.184.629-.425 1.23-.771 1.805-1.034.584-.261 1.005-.416 1.269-.457l.396-.09c.27.649.434 1.36.496 2.132.076.769.073 1.175-.009 1.216m-5.845 7.82c1.688 0 2.954-.202 3.821-.607.855-.404 1.292-1.238 1.292-2.496 0-.73-.273-1.34-.822-1.828-.278-.263-.613-.425-.989-.486-.375-.061-.949-.061-1.72 0-.769.062-1.298.09-1.582.09-.385 0-.8-.018-1.319-.059-.52-.04-.928-.065-1.223-.078-.294-.009-.609.027-.958.108-.345.082-.629.224-.853.425-.521.469-.79 1.077-.79 1.828 0 1.258.426 2.092 1.28 2.496.85.405 2.113.607 3.802.607h.061m-2.434-4.261c.268 0 .492.133.685.396.192.265.294.588.294.975 0 .385-.102.711-.294.973-.192.265-.417.396-.685.396-.279 0-.522-.131-.716-.396-.192-.262-.294-.588-.294-.973 0-.387.102-.71.294-.975.193-.264.436-.396.716-.396"
                  />
                </svg>
              </div>
              Github
              <div
                class="ml-2"
              >
                <svg
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
                  />
                  <path
                    d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
                  />
                </svg>
              </div>
            </button>
          </a>
          <a
            href="https://twitter.com/yonycalsin"
            rel="noreferrer"
            target="_blank"
          >
            <button
              as="button"
              class="text-sm font-medium rounded-lg px-4 py-2 text-center inline-flex border focus:ring-4 focus:outline-none text-secondary-700 hover:text-white border-secondary-700 hover:bg-secondary-800 focus:ring-secondary-300"
            >
              <div
                class="mr-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 19h-3v-10h3v10zm11 0h-3v-5.342c0-1.392-.496-2.085-1.479-2.085-.779 0-1.273.388-1.521 1.165v6.262h-3s.04-9 0-10h2.368l.183 2h.062c.615-1 1.598-1.678 2.946-1.678 1.025 0 1.854.285 2.487 1.001.637.717.954 1.679.954 3.03v5.647z"
                  />
                  <ellipse
                    cx="6.5"
                    cy="6.5"
                    rx="1.55"
                    ry="1.5"
                  />
                </svg>
              </div>
              Twitter
              <div
                class="ml-2"
              >
                <svg
                  baseProfile="tiny"
                  class="w-4 h-4 inline-block leading-4 shrink-0"
                  fill="currentColor"
                  height="1em"
                  role="icon"
                  stroke="currentColor"
                  stroke-width="0"
                  version="1.2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.89 7.012c.808-.496 1.343-1.173 1.605-2.034-.786.417-1.569.703-2.351.861-.703-.756-1.593-1.14-2.66-1.14-1.043 0-1.924.366-2.643 1.078-.715.717-1.076 1.588-1.076 2.605 0 .309.039.585.117.819-3.076-.105-5.622-1.381-7.628-3.837-.34.601-.51 1.213-.51 1.846 0 1.301.549 2.332 1.645 3.089-.625-.053-1.176-.211-1.645-.47 0 .929.273 1.705.82 2.388.549.676 1.254 1.107 2.115 1.291-.312.08-.641.118-.979.118-.312 0-.533-.026-.664-.083.23.757.664 1.371 1.291 1.841.625.472 1.344.721 2.152.743-1.332 1.045-2.855 1.562-4.578 1.562-.422 0-.721-.006-.902-.038 1.697 1.102 3.586 1.649 5.676 1.649 2.139 0 4.029-.542 5.674-1.626 1.645-1.078 2.859-2.408 3.639-3.974.784-1.564 1.172-3.192 1.172-4.892v-.468c.758-.57 1.371-1.212 1.84-1.921-.68.293-1.383.492-2.11.593z"
                  />
                </svg>
              </div>
            </button>
          </a>
        </div>
      </div>
      <hr
        class="opacity-[0.6] border-gray-300 border-solid w-full border-b-[1px] my-6"
      />
      <div
        class="py-3"
      >
        <div
          class="mb-6"
        >
          <div
            class="flex items-center justify-between relative"
          >
            <h1
              class="font-bold font-heading text-xl"
            >
              Recommendations
            </h1>
          </div>
        </div>
        <div
          aria-label="List of recommendations"
          class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-4"
          role="list"
        >
          <blockquote
            class="space-y-3 bg-white p-4 rounded-lg shadow-card border-l-4 border-primary-500"
            role="listitem"
          >
            <p>
              Yony is an amazing person at work
            </p>
            <p
              class="text-sm italic font-extrabold"
            >
              -
               
              <a
                class="font-medium text-primary-600 dark:text-primary-500 hover:underline text-gray-600"
                href="https://linkedin.com/in/mock-username"
                target="_blank"
              >
                Elon Musk
              </a>
            </p>
            <p
              class="italic text-xs text-gray-400"
            >
              CEO of Tesla, and SpaceX
            </p>
          </blockquote>
        </div>
      </div>
    </div>
    <footer
      class="my-6"
    >
      <div
        class="container"
      >
        <footer
          class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
        >
          <span
            class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
          >
            © 2022
             
            <a
              class="hover:underline"
              href="https://yonycalsin.com"
            >
              Yony Calsin™
            </a>
            . All Rights Reserved.
          </span>
          <ul
            class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
          >
            <li>
              <a
                class="mr-4 hover:underline md:mr-6 "
                href="#"
              >
                About
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                class="mr-4 hover:underline md:mr-6"
                href="#"
              >
                Licensing
              </a>
            </li>
            <li>
              <a
                class="hover:underline"
                href="#"
              >
                Contact
              </a>
            </li>
          </ul>
        </footer>
      </div>
    </footer>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;
